--- a/index.html
+++ b/index.html
@@ -43,6 +43,27 @@
                        <p class="tab-links">Experience</p> 
                        <p class="tab-links">Education</p> 
                     </div>
+                    <div class="tab-contents">
+                        <ul>
+                            <li><span>UI/UX</span>Designing Web/App interfaces</li>
+                            <li><span>Web Development</span>Designing Web/App Development</li>
+                            <li><span>App Development</span>Building Android/ios apps</li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents">
+                        <ul>
+                            <li><span>2021 - current</span>UI/UX Design traning at et institute</li>
+                            <li><span>2019</span>Team lead at starapp llc</li>
+                            <li><span>2017</span>Internship at ekart ecommerce</li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents">
+                        <ul>
+                            <li><span>UI/UX</span>Designing Web/App interfaces</li>
+                            <li><span>Web Development</span>Designing Web/App Development</li>
+                            <li><span>App Development</span>Building Android/ios apps</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
