--- a/index.html
+++ b/index.html
@@ -1,82 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Portfolio Website - Easy Tutorials</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/d452ef442a.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <div id="header">
-        <div class="container">
-            <nav>
-                <img src="images/logo.png" class="logo">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-            <div class="header-text">
-                <p>UI/ux Designer</p>
-                <h1>hi, I'm <span>Vedanth</span><br>choudhury from  bhilai chattisgarh</h1>
-            </div>
+      <div class="container">
+        <nav>
+          <img src="images/logo.png" class="logo" />
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="header-text">
+          <p>UI/ux Designer</p>
+          <h1>
+            hi, I'm <span>Vedanth</span><br />choudhury from bhilai chattisgarh
+          </h1>
         </div>
+      </div>
     </div>
     <!---------------------------About------------------------->
     <div id="about">
-        <div class="container">
-            <div class="row">
-                <div class="about-col-1">
-                    <img src="images/user.png">
-                </div>
-                <div class="about-col-2">
-                    <h1 class="sub-title">About me</h1>
-                    <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt odit maiores sint. Iure atque soluta ad. Quos velit a odit beatae temporibus inventore tempore doloremque excepturi eligendi. Ut, architecto reiciendis.
-                    </p>
-                    <div class="tab-titles">
-                       <p class="tab-links active-link" onclick="opentab('skills')">Skills</p> 
-                       <p class="tab-links" onclick="opentab('Experience')">Experience</p>
-                       <p class="tab-links" onclick="opentab('Education')">Education</p>
-                    </div>
-                    <div class="tab-contents active-tab" id="skills">
-                        <ul>
-                            <li><span>UI/UX</span><br>Designing Web/App interfaces</li>
-                            <li><span>Web Development</span><br>Designing Web/App Development</li>
-                            <li><span>App Development</span><br>Building Android/ios apps</li>
-                        </ul>
-                    </div>
-                    <div class="tab-contents" id="experience">
-                        <ul>
-                            <li><span>2021 - current</span><br>UI/UX Design traning at et institute</li>
-                            <li><span>2019 -2021</span><br>Team lead at starapp llc</li>
-                            <li><span>2017-2019</span><br>UI/UX Design Executive at coin digital Ltd.</li>
-                            <li><span>2016-2017</span><br>Internship at Ekart Ecommerce.</li>
-                        </ul>
-                    </div>
-                    <div class="tab-contents" id="education">
-                        <ul>
-                            <li><span>2016</span><br>UI/UX Design at ET Institute</li>
-                            <li><span>2016</span><br>MBA from MIT Bangalore.</li>
-                            <li><span>2014</span><br>from ISM Bangalore</li>
-                        </ul>
-                    </div>
-                </div>
+      <div class="container">
+        <div class="row">
+          <div class="about-col-1">
+            <img src="images/user.png" />
+          </div>
+          <div class="about-col-2">
+            <h1 class="sub-title">About me</h1>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt
+              odit maiores sint. Iure atque soluta ad. Quos velit a odit beatae
+              temporibus inventore tempore doloremque excepturi eligendi. Ut,
+              architecto reiciendis.
+            </p>
+            <div class="tab-titles">
+              <p class="tab-links active-link" onclick="opentab('skills')">
+                Skills
+              </p>
+              <p class="tab-links" onclick="opentab('experience')">
+                Experience
+              </p>
+              <p class="tab-links" onclick="opentab('education')">Education</p>
             </div>
+            <div class="tab-contents active-tab" id="skills">
+              <ul>
+                <li><span>UI/UX</span><br />Designing Web/App interfaces</li>
+                <li>
+                  <span>Web Development</span><br />Designing Web/App
+                  Development
+                </li>
+                <li>
+                  <span>App Development</span><br />Building Android/ios apps
+                </li>
+              </ul>
+            </div>
+            <div class="tab-contents" id="experience">
+              <ul>
+                <li>
+                  <span>2021 - current</span><br />UI/UX Design traning at et
+                  institute
+                </li>
+                <li><span>2019 -2021</span><br />Team lead at starapp llc</li>
+                <li>
+                  <span>2017-2019</span><br />UI/UX Design Executive at coin
+                  digital Ltd.
+                </li>
+                <li>
+                  <span>2016-2017</span><br />Internship at Ekart Ecommerce.
+                </li>
+              </ul>
+            </div>
+            <div class="tab-contents" id="education">
+              <ul>
+                <li><span>2016</span><br />UI/UX Design at ET Institute</li>
+                <li><span>2016</span><br />MBA from MIT Bangalore.</li>
+                <li><span>2014</span><br />BBA from ISM Bangalore.</li>
+              </ul>
+            </div>
+          </div>
         </div>
+      </div>
+    </div>
+    <!-- services -->
+    <div id="services">
+      <div class="container">
+        <h1 class="sub-title">My Services</h1>
+        <div class="services-list">
+          <div>
+            <i class="fas fa-code"></i>
+            <h2>Web Design</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
+              mollitia sit eveniet quae, beatae, ducimus cupiditate voluptatem
+              ab impedit facilis voluptates ipsam, adipisci quibusdam quam
+              pariatur iure! Ipsa, sunt quos.
+            </p>
+            <a href="#">Learn more</a>
+          </div>
+          <div>
+            <i class="fas fa-crop-alt"></i>
+            <h2>UI/UX Design</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
+              mollitia sit eveniet quae, beatae, ducimus cupiditate voluptatem
+              ab impedit facilis voluptates ipsam, adipisci quibusdam quam
+              pariatur iure! Ipsa, sunt quos.
+            </p>
+            <a href="#">Learn more</a>
+          </div>
+          <div>
+            <i class="fab fa-app-store"></i>
+            <h2>App Design</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
+              mollitia sit eveniet quae, beatae, ducimus cupiditate voluptatem
+              ab impedit facilis voluptates ipsam, adipisci quibusdam quam
+              pariatur iure! Ipsa, sunt quos.
+            </p>
+            <a href="#">Learn more</a>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script>
-        var tablinks = document.getElementByClassName("tab-links");
-        var tabcontents = document.getElementByClassName("tab-contents");
-        
-        function opentab(tabname){
+      var tablinks = document.getElementsByClassName("tab-links");
+      var tabcontents = document.getElementsByClassName("tab-contents");
 
+      function opentab(tabname) {
+        for (tablink of tablinks) {
+          tablink.classList.remove("active-link");
         }
+        for (tabcontent of tabcontents) {
+          tabcontent.classList.remove("active-tab");
+        }
+        event.currentTarget.classList.add("active-link");
+        document.getElementById(tabname).classList.add("active-tab");
+      }
     </script>
-</body>
+  </body>
 </html>
